worked on responsivness

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <h3 class="case-top-heading">Vi skapar fantastiska saker!</h3>
 
-        <div class="case_item_wrapper f">
+        <div class="case_item_wrapper">
 
             <a href="#" class="case_item">
 
