added ninfo section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CodeBet - Framtidens webbyrå</title>
+    <title>CodeBet - Digital byrå som bygger webbsidor och appar för framtiden!</title>
     <meta name="description" content="Webbsida för CodeBet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css" />
@@ -64,14 +64,14 @@
             <div class="hero_content">
                 <div class="hero_content-top">
                     <p class="hero_font--small">Codebet</p>
-                    <h3 class="hero_font--large">Vi bygger framtidens webblösningar. Och har kul på vägen.</h3>
+                    <h3 class="hero_font--large">Vi bygger framtidens webblösningar. <br/>Och har kul på vägen.</h3>
                 </div>
-                <div class="hero_content-bottom">
+                <!-- <div class="hero_content-bottom">
                     <p>CodeBet är en digital byrå ifrån Kalmar Småland som producerar resultatdrivande kommunikation. Är ni
                         intresserade av en partner som skapar digital synlighet som märks och känns, då är vi rätt byrå för
                         er.
                     </p>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -86,9 +86,9 @@
 
                 <div class="case_image u-bg-cover" style="background-image: url('img/bethard.jpg');"></div>
                 <div class="case">
-                    <h3 class="case_heading-top">Bethard</h3>
+                    <h3 class="case_heading-top">Sportsbook, app, frontwebb</h3>
                     <h3 class="case_heading-bottom">Bethard</h3>
-                    <p class="case_paragraph">Läs mer -></p>
+                    <p class="case_paragraph">Läs mer</p>
                 </div>
 
             </a>
@@ -99,30 +99,54 @@
                 </div>
                 <div class="case">
                     <h3 class="case_heading-top">Bethard</h3>
-                    <h3 class="case_heading-bottom">Bethard</h3>
-                    <p class="case_paragraph">Läs mer -></p>
+                    <h3 class="case_heading-bottom">Sport.se</h3>
+                    <p class="case_paragraph">Läs mer</p>
                 </div>
 
             </a>
 
             <a href="#" class="case_item">
 
-                <div class="case_image u-bg-cover" style="background-image: url('img/bethard.jpg');"></div>
+                <div class="case_image u-bg-cover" style="background-image: url('img/Rectangle 2.4.png');"></div>
                 <div class="case">
-                    <h3 class="case_heading-top">Bethard</h3>
-                    <h3 class="case_heading-bottom">Bethard</h3>
-                    <p class="case_paragraph">Läs mer -></p>
+                    <h3 class="case_heading-top">Frontend</h3>
+                    <h3 class="case_heading-bottom">24sverige.se</h3>
+                    <p class="case_paragraph">Läs mer</p>
                 </div>
             </a>
 
         </div>
+        <div class="info_section-wrapper">
+            <div class="info_section u-container-min">
+                <h3 class="info_section--heading">En vision världens <span class="u-highlight">bästa</span> arbetsplats!</h3>
+                <div class="info_section--paragraph">Codebet är en digital kommunikationsbyrå från Kalmar Småland. Vi är idag 9 st digitalt drivna utvecklare och kundansvariga som engagerar sig i våra kunders verksamhet och behov. Codebet är en digital kommunikationsbyrå från Kalmar Småland. Vi är idag 9 st digitalt drivna utvecklare och kundansvariga som engagerar sig i våra kunders verksamhet och behov.</div>
+                <div class="info_section--logos">
+                    <a href="#"><img src="img/logo_apple.svg"></a>
+                    <a href="#"><img src="img/logo_github.svg"></a>
+                    <a href="#"><img src="img/logo_vue.svg"></a>
+                    <a href="#"><img src="img/logo_slack.png"></a>
+                    <a href="#"><img src="img/logo_laravel.svg"></a>
+                    <a href="#"><img src="img/reactsjs.svg"></a>
+                </div>
+            </div>
+        </div>
     </section>
 
-
+        <div id="video_container" class="u-container">
+            <video id="video" muted>
+                <source src="img/video.mp4" type="video/mp4">
+                <source src="img/video.webm" type="video/webm">
+                Din webbläsare har inte support för den här filmen. Vänligen uppdatera din webbläsare.
+            </video>
+            <h3 id="video_heading">Vi gillar kod. Vi gillar dig</h3>
+            <p id="video_paragraph">Läs mer här!</p>
+            <button onclick="play()" type="button" id="playBtn">Play</button>
+        </div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="/Users/marcuskarlsson/Code/code-personal/codebet/js/mobile_menu.js"></script>
-    <script type="text/javascript" src="/Users/marcuskarlsson/Code/code-personal/codebet/js/slider.js"></script>
+    <script type="text/javascript" src="js/playbutton.js"></script>
+    <script type="text/javascript" src="js/mobile_menu.js"></script>
+    <script type="text/javascript" src="js/slider.js"></script>
 
 </body>
 
