--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
             <div class="hero_content">
                 <div class="hero_content-top">
                     <p class="hero_font--small">Codebet</p>
-                    <h3 class="hero_font--large">Vi bygger framtidens webblösningar. <br/>Och har kul på vägen.</h3>
+                    <h3 class="hero_font--large">Vi bygger framtidens webblösningar.
+                        <br/>Och har kul på vägen.</h3>
                 </div>
                 <!-- <div class="hero_content-bottom">
                     <p>CodeBet är en digital byrå ifrån Kalmar Småland som producerar resultatdrivande kommunikation. Är ni
@@ -118,30 +119,58 @@
         </div>
         <div class="info_section-wrapper">
             <div class="info_section u-container-min">
-                <h3 class="info_section--heading">En vision världens <span class="u-highlight">bästa</span> arbetsplats!</h3>
-                <div class="info_section--paragraph">Codebet är en digital kommunikationsbyrå från Kalmar Småland. Vi är idag 9 st digitalt drivna utvecklare och kundansvariga som engagerar sig i våra kunders verksamhet och behov. Codebet är en digital kommunikationsbyrå från Kalmar Småland. Vi är idag 9 st digitalt drivna utvecklare och kundansvariga som engagerar sig i våra kunders verksamhet och behov.</div>
+                <h3 class="info_section--heading">En vision. Världens
+                    <span class="u-highlight">bästa</span> arbetsplats!</h3>
+                <div class="info_section--paragraph">Codebet är en digital kommunikationsbyrå från Kalmar Småland. Vi är idag 9 st digitalt drivna utvecklare
+                    och kundansvariga som engagerar sig i våra kunders verksamhet och behov. Codebet är en digital kommunikationsbyrå
+                    från Kalmar Småland. Vi är idag 9 st digitalt drivna utvecklare och kundansvariga som engagerar sig i
+                    våra kunders verksamhet och behov.</div>
                 <div class="info_section--logos">
-                    <a href="#"><img src="img/logo_apple.svg"></a>
-                    <a href="#"><img src="img/logo_github.svg"></a>
-                    <a href="#"><img src="img/logo_vue.svg"></a>
-                    <a href="#"><img src="img/logo_slack.png"></a>
-                    <a href="#"><img src="img/logo_laravel.svg"></a>
-                    <a href="#"><img src="img/reactsjs.svg"></a>
+                    <a href="#">
+                        <img src="img/logo_apple.svg">
+                    </a>
+                    <a href="#">
+                        <img src="img/logo_github.svg">
+                    </a>
+                    <a href="#">
+                        <img src="img/logo_vue.svg">
+                    </a>
+                    <a href="#">
+                        <img src="img/logo_slack.png">
+                    </a>
+                    <a href="#">
+                        <img src="img/logo_laravel.svg">
+                    </a>
+                    <a href="#">
+                        <img src="img/reactsjs.svg">
+                    </a>
                 </div>
             </div>
         </div>
-    </section>
 
-        <div id="video_container" class="u-container">
-            <video id="video" muted>
-                <source src="img/video.mp4" type="video/mp4">
-                <source src="img/video.webm" type="video/webm">
-                Din webbläsare har inte support för den här filmen. Vänligen uppdatera din webbläsare.
-            </video>
-            <h3 id="video_heading">Vi gillar kod. Vi gillar dig</h3>
-            <p id="video_paragraph">Läs mer här!</p>
-            <button onclick="play()" type="button" id="playBtn">Play</button>
+    <div id="video_container" class="u-container">
+        <video id="video" muted>
+            <source src="img/video.mp4" type="video/mp4">
+            <source src="img/video.webm" type="video/webm"> Din webbläsare har inte support för den här filmen. Vänligen uppdatera din webbläsare.
+        </video>
+        <h3 id="video_heading">Vi gillar kod. Vi gillar dig</h3>
+        <p id="video_paragraph">Läs mer här!</p>
+        <button onclick="play()" type="button" id="playBtn">Play</button>
+    </div>
+
+    <div class="info_section-wrapper">
+        <div class="info_section u-container-min">
+            <h3 class="info_section--heading">En vision. Världens
+                <span class="u-highlight">bästa</span> arbetsplats!</h3>
+            <div class="info_section--paragraph">Codebet är en digital kommunikationsbyrå från Kalmar Småland. Vi är idag 9 st digitalt drivna utvecklare och
+            kundansvariga som engagerar sig i våra kunders verksamhet och behov. Codebet är en digital kommunikationsbyrå
+            från Kalmar Småland. Vi är idag 9 st digitalt drivna utvecklare och kundansvariga som engagerar sig i våra
+            kunders verksamhet och behov.
+            </div>
         </div>
+    </div>
+
+</section>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/playbutton.js"></script>
