--- a/index.html
+++ b/index.html
@@ -7,14 +7,44 @@
     <meta name="description" content="Webbsida för CodeBet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="/vendors/ionicons-2.0.1/css/ionicons.min.css"
+    <link rel="stylesheet" href="sass/vendors/ionicons-2.0.1/css/ionicons.min.css"
     />
     <link rel="stylesheet" href="./animate.css" />
 </head>
 
 <body class="u-container">
 
+    <!--MOBILE MENU-->
+    
+    <div class="bg--animation"></div>
+    <div class="bg--animation-1"></div>
+    <div class="mobile_menu f-c-c">
+        <div class="close_hamburger">
+            <div>
+                <div class="change bread1"></div>
+                <div class="change bread2"></div>
+            </div>
+        </div>
+        <ul>
+            <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/index.html" class="mobile_menu--item">
+                <li>HEM</li>
+            </a>
+            <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/about.html" class="mobile_menu--item">
+                <li>OM MIG</li>
+            </a>
+            <a class="mobile_menu--item">
+                <li>TJÄNSTER</li>
+            </a>
+            <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/contact.html" class="mobile_menu--item">
+                <li>KONTAKT</li>
+            </a>
+        </ul>
+    </div>
+    
+    <!--MOBILE MENU END-->
+
     <section>
+
         <div class="hero">
 
             <div class="header f f-b f-c-b">
@@ -32,40 +62,12 @@
 
             </div>
 
-            <!--MOBILE MENU-->
-
-            <div class="bg--animation"></div>
-            <div class="bg--animation-1"></div>
-            <div class="mobile_menu f-c-c">
-                <div class="close_hamburger">
-                    <div>
-                        <div class="change bread1"></div>
-                        <div class="change bread2"></div>
-                    </div>
-                </div>
-                <ul>
-                    <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/index.html" class="mobile_menu--item">
-                        <li>HEM</li>
-                    </a>
-                    <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/about.html" class="mobile_menu--item">
-                        <li>OM MIG</li>
-                    </a>
-                    <a class="mobile_menu--item">
-                        <li>TJÄNSTER</li>
-                    </a>
-                    <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/contact.html" class="mobile_menu--item">
-                        <li>KONTAKT</li>
-                    </a>
-                </ul>
-            </div>
-
-            <!--MOBILE MENU END-->
-
             <div class="hero_content">
                 <div class="hero_content-top">
                     <p class="hero_font--small">Codebet</p>
                     <h3 class="hero_font--large">Vi bygger framtidens webblösningar.
                         <br/>Och har kul på vägen.</h3>
+                        <a href="#" class="btn_primary">Läs mer </a>
                 </div>
                 <!-- <div class="hero_content-bottom">
                     <p>CodeBet är en digital byrå ifrån Kalmar Småland som producerar resultatdrivande kommunikation. Är ni
@@ -93,7 +95,17 @@
                 <div class="case-project">
                     <h3 class="case_heading-top">Sportsbook, app, frontwebb</h3>
                     <h3 class="case_heading-bottom">Bethard</h3>
-                    <p class="case_paragraph">Läs mer</p>
+                    <p class="case_paragraph">Läs mer <svg width="22" height="8" viewBox="0 0 22 8" version="1.1" class="arrow-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g id="Canvas" transform="translate(-1152 -924)">
+                            <g id="Arrow 2.2">
+                                <use xlink:href="#path0_stroke" transform="translate(1152 928)" fill="#FFFFFF" />
+                            </g>
+                        </g>
+                        <defs>
+                            <path id="path0_stroke" d="M 21.3536 0.353553C 21.5488 0.158291 21.5488 -0.158291 21.3536 -0.353553L 18.1716 -3.53553C 17.9763 -3.7308 17.6597 -3.7308 17.4645 -3.53553C 17.2692 -3.34027 17.2692 -3.02369 17.4645 -2.82843L 20.2929 0L 17.4645 2.82843C 17.2692 3.02369 17.2692 3.34027 17.4645 3.53553C 17.6597 3.7308 17.9763 3.7308 18.1716 3.53553L 21.3536 0.353553ZM 0 0.5L 21 0.5L 21 -0.5L 0 -0.5L 0 0.5Z"
+                            />
+                        </defs>
+                    </svg></p>
                 </div>
 
             </a>
@@ -105,7 +117,17 @@
                 <div class="case-project">
                     <h3 class="case_heading-top">Bethard</h3>
                     <h3 class="case_heading-bottom">Sport.se</h3>
-                    <p class="case_paragraph">Läs mer</p>
+                    <p class="case_paragraph">Läs mer <svg width="22" height="8" viewBox="0 0 22 8" version="1.1" class="arrow-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g id="Canvas" transform="translate(-1152 -924)">
+                            <g id="Arrow 2.2">
+                                <use xlink:href="#path0_stroke" transform="translate(1152 928)" fill="#FFFFFF" />
+                            </g>
+                        </g>
+                        <defs>
+                            <path id="path0_stroke" d="M 21.3536 0.353553C 21.5488 0.158291 21.5488 -0.158291 21.3536 -0.353553L 18.1716 -3.53553C 17.9763 -3.7308 17.6597 -3.7308 17.4645 -3.53553C 17.2692 -3.34027 17.2692 -3.02369 17.4645 -2.82843L 20.2929 0L 17.4645 2.82843C 17.2692 3.02369 17.2692 3.34027 17.4645 3.53553C 17.6597 3.7308 17.9763 3.7308 18.1716 3.53553L 21.3536 0.353553ZM 0 0.5L 21 0.5L 21 -0.5L 0 -0.5L 0 0.5Z"
+                            />
+                        </defs>
+                    </svg></p>
                 </div>
 
             </a>
@@ -116,7 +138,17 @@
                 <div class="case-project">
                     <h3 class="case_heading-top">Frontend</h3>
                     <h3 class="case_heading-bottom">24sverige.se</h3>
-                    <p class="case_paragraph">Läs mer</p>
+                    <p class="case_paragraph">Läs mer <svg width="22" height="8" viewBox="0 0 22 8" version="1.1" class="arrow-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g id="Canvas" transform="translate(-1152 -924)">
+                            <g id="Arrow 2.2">
+                                <use xlink:href="#path0_stroke" transform="translate(1152 928)" fill="#FFFFFF" />
+                            </g>
+                        </g>
+                        <defs>
+                            <path id="path0_stroke" d="M 21.3536 0.353553C 21.5488 0.158291 21.5488 -0.158291 21.3536 -0.353553L 18.1716 -3.53553C 17.9763 -3.7308 17.6597 -3.7308 17.4645 -3.53553C 17.2692 -3.34027 17.2692 -3.02369 17.4645 -2.82843L 20.2929 0L 17.4645 2.82843C 17.2692 3.02369 17.2692 3.34027 17.4645 3.53553C 17.6597 3.7308 17.9763 3.7308 18.1716 3.53553L 21.3536 0.353553ZM 0 0.5L 21 0.5L 21 -0.5L 0 -0.5L 0 0.5Z"
+                            />
+                        </defs>
+                    </svg></p>
                 </div>
             </a>
 
@@ -143,67 +175,39 @@
                     <img src="img/logo_vue.svg">
                 </a>
                 <a href="#">
-                    <img src="img/logo_slack.png">
+                    <img src="img/logo_slack.svg">
                 </a>
                 <a href="#">
                     <img src="img/logo_laravel.svg">
                 </a>
                 <a href="#">
-                    <img src="img/reactsjs.svg">
+                    <img src="img/logo_react.svg">
                 </a>
             </div>
         </div>
     </div>
 
-
-<!--
-    //VIDEO
--->
-
-    <div id="video_container" class="u-container">
-        <video id="video" muted>
-            <source src="img/video.mp4" type="video/mp4">
-            <source src="img/video.webm" type="video/webm"> Din webbläsare har inte support för den här filmen. Vänligen uppdatera din webbläsare.
-        </video>
-        <h3 id="video_heading">Vi gillar kod. Vi gillar dig</h3>
-        <p id="video_paragraph">Läs mer här!</p>
-        <button onclick="play()" type="button" id="playBtn">Play</button>
-    </div>
-
-
-    <div class="info_section-wrapper">
-        <div class="info_section u-container-min">
-            <h3 class="info_section--heading">En vision. Världens
-                <span class="u-highlight">bästa</span> arbetsplats!</h3>
-            <div class="info_section--paragraph">Codebet är en digital kommunikationsbyrå från Kalmar Småland. Vi är idag 9 st digitalt drivna utvecklare och
-            kundansvariga som engagerar sig i våra kunders verksamhet och behov. Codebet är en digital kommunikationsbyrå
-            från Kalmar Småland. Vi är idag 9 st digitalt drivna utvecklare och kundansvariga som engagerar sig i våra
-            kunders verksamhet och behov.
+    <section class="footer">
+        <div class="footer-col-2-3">
+            <p>Om oss</p>
+            <p>Codebet är en digital utvecklingsbyrå som jobbar med kundspecifika lösningar inom webb- och nativeapplikationer.</p>
+            <div class="icons">
+                <a href="#"><i class="icon ion-social-facebook"></i></a>
+                <a href="#"><i class="icon ion-social-instagram-outline"></i></a>
+                <a href="#"><i class="icon ion-social-github"></i></a>
             </div>
         </div>
-    </div>
-
-    <section class="footer">
-        <div class="footer-col-1-4">
+        <div class="footer-col-1-3">
             <p>Adress</p>
             <p>Ölandsgatan 30</p>
             <p>392 30 Kalmar</p>
+            <p>Sweden</p>
+            <p>Sweden</p>
         </div>
-        <div class="footer-col-1-4">
+        <div class="footer-col-1-3">
             <p>Kontakt</p>
-            <p><a href="#">info@codebet.se</a></p>
+            <p><a href="#">073-123 45 67</a></p>
             <p><a href="#">join@codebet.se</a></p>
-        </div>
-        <div class="footer-col-1-4">
-            <p>&nbsp;</p>
-            <p>073-123 45 67</p>
-            <p>073-124 54 76</p>
-        </div>
-        <div class="footer-col-1-4">
-            <p>Sociala medier</p>
-            <i class="icon ion-social-facebook"></i>
-            <i class="icon ion-social-instagram-outline"></i>
-            <i class="icon ion-social-github"></i>
         </div>
     </section>
 
