changed meta info

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CodeBet - Digital byrå som bygger webbsidor och appar för framtiden!</title>
-    <meta name="description" content="Webbsida för CodeBet">
+    <title>CodeBet - Digital digital utvecklingsbyrå!</title>
+    <meta name="description" content="Codebet AB - digital utvecklingsbyrå!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="sass/vendors/ionicons-2.0.1/css/ionicons.min.css"
