working on mobile menu

--- a/index.html
+++ b/index.html
@@ -16,29 +16,25 @@
 
     <!--MOBILE MENU-->
     
-    <div class="bg--animation"></div>
-    <div class="bg--animation-1"></div>
-    <div class="mobile_menu f-c-c">
-        <div class="close_hamburger">
-            <div>
-                <div class="change bread1"></div>
-                <div class="change bread2"></div>
-            </div>
+    <div class="header_menu">
+        <div class="bg--animation"></div>
+        <div class="bg--animation-1"></div>
+        <div class="mobile_menu f-c-c">
+            <ul>
+                <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/index.html" class="mobile_menu--item">
+                    <li>HEM</li>
+                </a>
+                <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/about.html" class="mobile_menu--item">
+                    <li>OM MIG</li>
+                </a>
+                <a class="mobile_menu--item">
+                    <li>TJÄNSTER</li>
+                </a>
+                <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/contact.html" class="mobile_menu--item">
+                    <li>KONTAKT</li>
+                </a>
+            </ul>
         </div>
-        <ul>
-            <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/index.html" class="mobile_menu--item">
-                <li>HEM</li>
-            </a>
-            <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/about.html" class="mobile_menu--item">
-                <li>OM MIG</li>
-            </a>
-            <a class="mobile_menu--item">
-                <li>TJÄNSTER</li>
-            </a>
-            <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/contact.html" class="mobile_menu--item">
-                <li>KONTAKT</li>
-            </a>
-        </ul>
     </div>
     
     <!--MOBILE MENU END-->
