--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./animate.css" />
 </head>
 
-<body class="u-container">
+<body>
 
     <!--MOBILE MENU-->
     
@@ -39,9 +39,9 @@
     
     <!--MOBILE MENU END-->
 
-    <section>
+    <section id="hero">
 
-        <div class="hero">
+        <div class="hero u-container">
 
             <div class="header f f-b f-c-b">
                 <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/index.html" class="header_logo"></a>
@@ -79,7 +79,7 @@
     //CASE
 -->
 
-    <section class="case">
+    <section class="case u-container">
 
         <h3 class="case-top-heading">Vi skapar fantastiska saker!</h3>
 
@@ -152,7 +152,7 @@
 
     </section>
 
-    <div class="info_section-wrapper">
+    <section class="info_section-wrapper">
         <div class="info_section u-container-min">
             <h3 class="info_section--heading">Vi jobbar tillsammans mot visionen. Världens
                 <span class="u-highlight">bästa</span> arbetsplats!</h3>
@@ -181,29 +181,31 @@
                 </a>
             </div>
         </div>
-    </div>
+    </section>
 
-    <section class="footer">
-        <div class="footer-col-2-3">
-            <p>Om oss</p>
-            <p>Codebet är en digital utvecklingsbyrå som jobbar med kundspecifika lösningar inom webb- och nativeapplikationer.</p>
-            <div class="icons">
-                <a href="#"><i class="icon ion-social-facebook"></i></a>
-                <a href="#"><i class="icon ion-social-instagram-outline"></i></a>
-                <a href="#"><i class="icon ion-social-github"></i></a>
+    <section class="footer_wrapper">
+        <div class="u-container footer_container">
+            <div class="footer-col-2-3">
+                <p>Om oss</p>
+                <p>Codebet är en digital utvecklingsbyrå som jobbar med kundspecifika lösningar inom webb- och nativeapplikationer.</p>
+                <div class="icons">
+                    <a href="#"><i class="icon ion-social-facebook"></i></a>
+                    <a href="#"><i class="icon ion-social-instagram-outline"></i></a>
+                    <a href="#"><i class="icon ion-social-github"></i></a>
+                </div>
             </div>
-        </div>
-        <div class="footer-col-1-3">
-            <p>Adress</p>
-            <p>Ölandsgatan 30</p>
-            <p>392 30 Kalmar</p>
-            <p>Sweden</p>
-            <p>Sweden</p>
-        </div>
-        <div class="footer-col-1-3">
-            <p>Kontakt</p>
-            <p><a href="#">073-123 45 67</a></p>
-            <p><a href="#">join@codebet.se</a></p>
+            <div class="footer-col-1-3">
+                <p>Adress</p>
+                <p>Ölandsgatan 30</p>
+                <p>392 30 Kalmar</p>
+                <p>Sweden</p>
+                <p>Sweden</p>
+            </div>
+            <div class="footer-col-1-3">
+                <p>Kontakt</p>
+                <p><a href="#">073-123 45 67</a></p>
+                <p><a href="#">join@codebet.se</a></p>
+            </div>
         </div>
     </section>
 
