updated header section

--- a/index.html
+++ b/index.html
@@ -7,63 +7,77 @@
     <meta name="description" content="Codebet AB - digital utvecklingsbyrå!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="sass/vendors/ionicons-2.0.1/css/ionicons.min.css"
-    />
+    <link rel="stylesheet" href="sass/vendors/ionicons-2.0.1/css/ionicons.min.css" />
     <link rel="stylesheet" href="./animate.css" />
 </head>
 
 <body>
 
     <!--MOBILE MENU-->
-    
-    <div class="header_menu">
-        <div class="bg--animation"></div>
-        <div class="bg--animation-1"></div>
-        <div class="mobile_menu f-c-c">
-            <ul>
-                <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/index.html" class="mobile_menu--item">
-                    <li>HEM</li>
-                </a>
-                <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/about.html" class="mobile_menu--item">
-                    <li>OM MIG</li>
-                </a>
-                <a class="mobile_menu--item">
-                    <li>TJÄNSTER</li>
-                </a>
-                <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/contact.html" class="mobile_menu--item">
-                    <li>KONTAKT</li>
-                </a>
-            </ul>
-        </div>
+
+
+    <div class="mobile_menu f-c-c">
+        <ul style="width: 100%;">
+            <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/index.html" class="mobile_menu--item">
+                <li>HEM</li>
+            </a>
+            <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/about.html" class="mobile_menu--item">
+                <li>OM MIG</li>
+            </a>
+            <a class="mobile_menu--item">
+                <li>TJÄNSTER</li>
+            </a>
+            <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/contact.html" class="mobile_menu--item">
+                <li>KONTAKT</li>
+            </a>
+        </ul>
     </div>
-    
+
+
     <!--MOBILE MENU END-->
+
+    <section class="header f f-b f-c-b">
+        <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/index.html" class="header_logo"></a>
+
+        <ul class="header_menu-list">
+            <a href="#" class="header_menu-list--item active">
+                <li>Hem</li>
+            </a>
+            <a href="#" class="header_menu-list--item">
+                <li>Om oss</li>
+            </a>
+            <a href="#" class="header_menu-list--item">
+                <li>Case</li>
+            </a>
+            <a href="#" class="header_menu-list--item">
+                <li>Kontakt</li>
+            </a>
+        </ul>
+
+        <!--HAMBURGER MENU-->
+
+        <div class="hamburger" onclick="myFunction(this)">
+            <div>
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
+        </div>
+
+        <!--END HAMBURGER MENU-->
+
+    </section>
 
     <section id="hero">
 
         <div class="hero u-container">
-
-            <div class="header f f-b f-c-b">
-                <a href="/Users/marcuskarlsson/Code/code-personal/jonathanrudman/index.html" class="header_logo"></a>
-
-                <!--HAMBURGER MENU-->
-
-                <div class="hamburger" onclick="myFunction(this)">
-                    <div>
-                        <div class="bar1"></div>
-                        <div class="bar2"></div>
-                        <div class="bar3"></div>
-                    </div>
-                </div>
-
-            </div>
 
             <div class="hero_content">
                 <div class="hero_content-top">
                     <p class="hero_font--small">Codebet</p>
                     <h3 class="hero_font--large">Vi bygger framtidens webblösningar.
                         <br/>Och har kul på vägen.</h3>
-                        <a href="#" class="btn_primary">Läs mer </a>
+                    <a href="#" class="btn_primary">Läs mer </a>
                 </div>
                 <!-- <div class="hero_content-bottom">
                     <p>CodeBet är en digital byrå ifrån Kalmar Småland som producerar resultatdrivande kommunikation. Är ni
@@ -75,7 +89,7 @@
         </div>
     </section>
 
-<!--
+    <!--
     //CASE
 -->
 
@@ -91,17 +105,20 @@
                 <div class="case-project">
                     <h3 class="case_heading-top">Sportsbook, app, frontwebb</h3>
                     <h3 class="case_heading-bottom">Bethard</h3>
-                    <p class="case_paragraph">Läs mer <svg width="22" height="8" viewBox="0 0 22 8" version="1.1" class="arrow-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <g id="Canvas" transform="translate(-1152 -924)">
-                            <g id="Arrow 2.2">
-                                <use xlink:href="#path0_stroke" transform="translate(1152 928)" fill="#FFFFFF" />
+                    <p class="case_paragraph">Läs mer
+                        <svg width="22" height="8" viewBox="0 0 22 8" version="1.1" class="arrow-icon" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <g id="Canvas" transform="translate(-1152 -924)">
+                                <g id="Arrow 2.2">
+                                    <use xlink:href="#path0_stroke" transform="translate(1152 928)" fill="#FFFFFF" />
+                                </g>
                             </g>
-                        </g>
-                        <defs>
-                            <path id="path0_stroke" d="M 21.3536 0.353553C 21.5488 0.158291 21.5488 -0.158291 21.3536 -0.353553L 18.1716 -3.53553C 17.9763 -3.7308 17.6597 -3.7308 17.4645 -3.53553C 17.2692 -3.34027 17.2692 -3.02369 17.4645 -2.82843L 20.2929 0L 17.4645 2.82843C 17.2692 3.02369 17.2692 3.34027 17.4645 3.53553C 17.6597 3.7308 17.9763 3.7308 18.1716 3.53553L 21.3536 0.353553ZM 0 0.5L 21 0.5L 21 -0.5L 0 -0.5L 0 0.5Z"
-                            />
-                        </defs>
-                    </svg></p>
+                            <defs>
+                                <path id="path0_stroke" d="M 21.3536 0.353553C 21.5488 0.158291 21.5488 -0.158291 21.3536 -0.353553L 18.1716 -3.53553C 17.9763 -3.7308 17.6597 -3.7308 17.4645 -3.53553C 17.2692 -3.34027 17.2692 -3.02369 17.4645 -2.82843L 20.2929 0L 17.4645 2.82843C 17.2692 3.02369 17.2692 3.34027 17.4645 3.53553C 17.6597 3.7308 17.9763 3.7308 18.1716 3.53553L 21.3536 0.353553ZM 0 0.5L 21 0.5L 21 -0.5L 0 -0.5L 0 0.5Z"
+                                />
+                            </defs>
+                        </svg>
+                    </p>
                 </div>
 
             </a>
@@ -113,17 +130,20 @@
                 <div class="case-project">
                     <h3 class="case_heading-top">Bethard</h3>
                     <h3 class="case_heading-bottom">Sport.se</h3>
-                    <p class="case_paragraph">Läs mer <svg width="22" height="8" viewBox="0 0 22 8" version="1.1" class="arrow-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <g id="Canvas" transform="translate(-1152 -924)">
-                            <g id="Arrow 2.2">
-                                <use xlink:href="#path0_stroke" transform="translate(1152 928)" fill="#FFFFFF" />
+                    <p class="case_paragraph">Läs mer
+                        <svg width="22" height="8" viewBox="0 0 22 8" version="1.1" class="arrow-icon" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <g id="Canvas" transform="translate(-1152 -924)">
+                                <g id="Arrow 2.2">
+                                    <use xlink:href="#path0_stroke" transform="translate(1152 928)" fill="#FFFFFF" />
+                                </g>
                             </g>
-                        </g>
-                        <defs>
-                            <path id="path0_stroke" d="M 21.3536 0.353553C 21.5488 0.158291 21.5488 -0.158291 21.3536 -0.353553L 18.1716 -3.53553C 17.9763 -3.7308 17.6597 -3.7308 17.4645 -3.53553C 17.2692 -3.34027 17.2692 -3.02369 17.4645 -2.82843L 20.2929 0L 17.4645 2.82843C 17.2692 3.02369 17.2692 3.34027 17.4645 3.53553C 17.6597 3.7308 17.9763 3.7308 18.1716 3.53553L 21.3536 0.353553ZM 0 0.5L 21 0.5L 21 -0.5L 0 -0.5L 0 0.5Z"
-                            />
-                        </defs>
-                    </svg></p>
+                            <defs>
+                                <path id="path0_stroke" d="M 21.3536 0.353553C 21.5488 0.158291 21.5488 -0.158291 21.3536 -0.353553L 18.1716 -3.53553C 17.9763 -3.7308 17.6597 -3.7308 17.4645 -3.53553C 17.2692 -3.34027 17.2692 -3.02369 17.4645 -2.82843L 20.2929 0L 17.4645 2.82843C 17.2692 3.02369 17.2692 3.34027 17.4645 3.53553C 17.6597 3.7308 17.9763 3.7308 18.1716 3.53553L 21.3536 0.353553ZM 0 0.5L 21 0.5L 21 -0.5L 0 -0.5L 0 0.5Z"
+                                />
+                            </defs>
+                        </svg>
+                    </p>
                 </div>
 
             </a>
@@ -134,17 +154,20 @@
                 <div class="case-project">
                     <h3 class="case_heading-top">Frontend</h3>
                     <h3 class="case_heading-bottom">24sverige.se</h3>
-                    <p class="case_paragraph">Läs mer <svg width="22" height="8" viewBox="0 0 22 8" version="1.1" class="arrow-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <g id="Canvas" transform="translate(-1152 -924)">
-                            <g id="Arrow 2.2">
-                                <use xlink:href="#path0_stroke" transform="translate(1152 928)" fill="#FFFFFF" />
+                    <p class="case_paragraph">Läs mer
+                        <svg width="22" height="8" viewBox="0 0 22 8" version="1.1" class="arrow-icon" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <g id="Canvas" transform="translate(-1152 -924)">
+                                <g id="Arrow 2.2">
+                                    <use xlink:href="#path0_stroke" transform="translate(1152 928)" fill="#FFFFFF" />
+                                </g>
                             </g>
-                        </g>
-                        <defs>
-                            <path id="path0_stroke" d="M 21.3536 0.353553C 21.5488 0.158291 21.5488 -0.158291 21.3536 -0.353553L 18.1716 -3.53553C 17.9763 -3.7308 17.6597 -3.7308 17.4645 -3.53553C 17.2692 -3.34027 17.2692 -3.02369 17.4645 -2.82843L 20.2929 0L 17.4645 2.82843C 17.2692 3.02369 17.2692 3.34027 17.4645 3.53553C 17.6597 3.7308 17.9763 3.7308 18.1716 3.53553L 21.3536 0.353553ZM 0 0.5L 21 0.5L 21 -0.5L 0 -0.5L 0 0.5Z"
-                            />
-                        </defs>
-                    </svg></p>
+                            <defs>
+                                <path id="path0_stroke" d="M 21.3536 0.353553C 21.5488 0.158291 21.5488 -0.158291 21.3536 -0.353553L 18.1716 -3.53553C 17.9763 -3.7308 17.6597 -3.7308 17.4645 -3.53553C 17.2692 -3.34027 17.2692 -3.02369 17.4645 -2.82843L 20.2929 0L 17.4645 2.82843C 17.2692 3.02369 17.2692 3.34027 17.4645 3.53553C 17.6597 3.7308 17.9763 3.7308 18.1716 3.53553L 21.3536 0.353553ZM 0 0.5L 21 0.5L 21 -0.5L 0 -0.5L 0 0.5Z"
+                                />
+                            </defs>
+                        </svg>
+                    </p>
                 </div>
             </a>
 
@@ -156,27 +179,28 @@
         <div class="info_section u-container-min">
             <h3 class="info_section--heading">Vi jobbar tillsammans mot visionen. Världens
                 <span class="u-highlight">bästa</span> arbetsplats!</h3>
-            <div class="info_section--paragraph">Codebet är en digital kommunikationsbyrå från Kalmar Småland. Vi är idag 9 st digitalt drivna utvecklare och kundansvariga
-                som engagerar sig i våra kunders verksamhet och behov. Codebet är en digital kommunikationsbyrå från Kalmar Småland.
-                Vi är idag 9 st digitalt drivna utvecklare och kundansvariga som engagerar sig i våra kunders verksamhet och
-                behov.</div>
+            <div class="info_section--paragraph">Codebet är en digital kommunikationsbyrå från Kalmar Småland. Vi är idag 9 st digitalt drivna utvecklare och
+                kundansvariga som engagerar sig i våra kunders verksamhet och behov. Codebet är en digital kommunikationsbyrå
+                från Kalmar Småland. Vi är idag 9 st digitalt drivna utvecklare och kundansvariga som engagerar sig i våra
+                kunders verksamhet och behov.
+            </div>
             <div class="info_section--logos">
-                <a href="#">
+                <a href="https://www.apple.com/se/">
                     <img src="img/logo_apple.svg">
                 </a>
-                <a href="#">
+                <a href="https://github.com">
                     <img src="img/logo_github.svg">
                 </a>
-                <a href="#">
+                <a href="https://vuejs.org/">
                     <img src="img/logo_vue.svg">
                 </a>
-                <a href="#">
+                <a href="https://slack.com/">
                     <img src="img/logo_slack.svg">
                 </a>
-                <a href="#">
+                <a href="https://laravel.com/">
                     <img src="img/logo_laravel.svg">
                 </a>
-                <a href="#">
+                <a href="https://reactjs.org/">
                     <img src="img/logo_react.svg">
                 </a>
             </div>
@@ -189,9 +213,15 @@
                 <p>Om oss</p>
                 <p>Codebet är en digital utvecklingsbyrå som jobbar med kundspecifika lösningar inom webb- och nativeapplikationer.</p>
                 <div class="icons">
-                    <a href="#"><i class="icon ion-social-facebook"></i></a>
-                    <a href="#"><i class="icon ion-social-instagram-outline"></i></a>
-                    <a href="#"><i class="icon ion-social-github"></i></a>
+                    <a href="#">
+                        <i class="icon ion-social-facebook"></i>
+                    </a>
+                    <a href="#">
+                        <i class="icon ion-social-instagram-outline"></i>
+                    </a>
+                    <a href="#">
+                        <i class="icon ion-social-github"></i>
+                    </a>
                 </div>
             </div>
             <div class="footer-col-1-3">
@@ -203,8 +233,12 @@
             </div>
             <div class="footer-col-1-3">
                 <p>Kontakt</p>
-                <p><a href="#">073-123 45 67</a></p>
-                <p><a href="#">join@codebet.se</a></p>
+                <p>
+                    <a href="#">073-123 45 67</a>
+                </p>
+                <p>
+                    <a href="#">join@codebet.se</a>
+                </p>
             </div>
         </div>
     </section>
